data/XU_test/negative/a3m_no_hhm/test_non_AMP_7.a3m
>test|non_AMP|7
MSSEKKLKAKVLREMKPEERRELLNQLRAELVRLETQRARGFVEKPGRIRQVRRIIARILTIEREEELKKAKSRS